Updated some dependencies

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "express": "^4.17.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -37,13 +37,13 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular/cli": "^9.1.1",
     "@angular/compiler-cli": "^9.1.2",
     "@angular/language-service": "~9.1.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.5.0",
